version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Mechanical/MechanicalDataModel.rst.txt
.. vale off



:class:`MechanicalDataModel`
============================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Mechanical.MechanicalDataModel

   Bases: :py:obj:`object`



.. py:currentmodule:: MechanicalDataModel

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AddSessionVariable`
            - AddSessionVariable method.
          * - :py:attr:`~AnalysisById`
            - See  for general information about this method.
          * - :py:attr:`~AnalysisByName`
            - AnalysisByName method.
          * - :py:attr:`~AreEqual`
            - AreEqual method.
          * - :py:attr:`~CleanUp`
            - CleanUp method.
          * - :py:attr:`~ComponentById`
            - ComponentById method.
          * - :py:attr:`~CoordinateSystemById`
            - CoordinateSystemById method.
          * - :py:attr:`~CreateChild`
            - CreateChild method.
          * - :py:attr:`~CreateObjRef`
            - CreateObjRef method.
          * - :py:attr:`~CreateObject`
            - CreateObject method.
          * - :py:attr:`~CreateObjectCommand`
            - CreateObjectCommand method.
          * - :py:attr:`~CurrentConsistentUnitFromQuantityName`
            - CurrentConsistentUnitFromQuantityName method.
          * - :py:attr:`~CurrentUnitFromQuantityName`
            - CurrentUnitFromQuantityName method.
          * - :py:attr:`~Delete`
            - Delete method.
          * - :py:attr:`~DeleteSessionVariable`
            - DeleteSessionVariable method.
          * - :py:attr:`~DummyNodeRemoveAndFillObjects`
            - DummyNodeRemoveAndFillObjects method.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetLifetimeService`
            - GetLifetimeService method.
          * - :py:attr:`~GetObjectById`
            - GetObjectById method.
          * - :py:attr:`~GetObjectsByName`
            - GetObjectsByName method.
          * - :py:attr:`~GetObjectsByType`
            - GetObjectsByType method.
          * - :py:attr:`~GetSessionVariableValue`
            - GetSessionVariableValue method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~GetUserObjectById`
            - GetUserObjectById method.
          * - :py:attr:`~GetUserObjects`
            - GetUserObjects method.
          * - :py:attr:`~InitializeLifetimeService`
            - InitializeLifetimeService method.
          * - :py:attr:`~MeshDataByName`
            - MeshDataByName method.
          * - :py:attr:`~RecomputeState`
            - Recomputes the states of the data model objects. Best used with data model changes made during callbacks in Python Code or Extensions.
          * - :py:attr:`~Remove`
            - Remove method.
          * - :py:attr:`~ShouldSuspendStateEngineForDelete`
            - ShouldSuspendStateEngineForDelete method.
          * - :py:attr:`~Suppress`
            - Suppress method.
          * - :py:attr:`~ToString`
            - ToString method.
          * - :py:attr:`~Unsuppress`
            - Unsuppress method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AnalysisList`
            - AnalysisList property.
          * - :py:attr:`~AnalysisNames`
            - AnalysisNames property.
          * - :py:attr:`~Components`
            - Components property.
          * - :py:attr:`~CoordinateSystems`
            - CoordinateSystems property.
          * - :py:attr:`~DataModelObject`
            - DataModelObject property.
          * - :py:attr:`~EngineeringData`
            - EngineeringData property.
          * - :py:attr:`~GeoData`
            - GeoData property.
          * - :py:attr:`~InternalDataObjects`
            - InternalDataObjects property.
          * - :py:attr:`~InternalObject`
            - InternalObject property.
          * - :py:attr:`~MeshDataNames`
            - MeshDataNames property.
          * - :py:attr:`~ObjectIdentifier`
            - ObjectIdentifier property.
          * - :py:attr:`~ObjectLocation`
            - ObjectLocation property.
          * - :py:attr:`~ObjectTags`
            - ObjectTags property.
          * - :py:attr:`~Parent`
            - Parent property.
          * - :py:attr:`~Project`
            - Project property.
          * - :py:attr:`~Tree`
            - Tree property.
          * - :py:attr:`~WorkingDir`
            - WorkingDir property.







Property detail
---------------
.. py:property:: AnalysisList
   :type: Optional[List[Ansys.ACT.Interfaces.Analysis.IAnalysis]]


   
   AnalysisList property.
















   ..
       !! processed by numpydoc !!

.. py:property:: AnalysisNames
   :type: Optional[List[str]]


   
   AnalysisNames property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Components
   :type: Optional[List[Ansys.ACT.Interfaces.Mechanical.IMechanicalSelectionInfo]]


   
   Components property.
















   ..
       !! processed by numpydoc !!

.. py:property:: CoordinateSystems
   :type: Optional[Iterable[Ansys.ACT.Interfaces.Analysis.ICoordinateSystem]]


   
   CoordinateSystems property.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObject
   :type: Optional[Ansys.ACT.Interfaces.DataModel.IDataModelObject]


   
   DataModelObject property.
















   ..
       !! processed by numpydoc !!

.. py:property:: EngineeringData
   :type: Optional[Any]


   
   EngineeringData property.
















   ..
       !! processed by numpydoc !!

.. py:property:: GeoData
   :type: Optional[Ansys.ACT.Interfaces.Geometry.IGeoData]


   
   GeoData property.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalDataObjects
   :type: Optional[List[Any]]


   
   InternalDataObjects property.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Any]


   
   InternalObject property.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshDataNames
   :type: Optional[List[str]]


   
   MeshDataNames property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectIdentifier
   :type: Optional[Ansys.ACT.Core.Application.Model.ObjectIdentifier]


   
   ObjectIdentifier property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectLocation
   :type: Optional[Ansys.ACT.Interfaces.UserObject.ObjectLocationEnum]


   
   ObjectLocation property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectTags
   :type: Optional[Ansys.Mechanical.Application.ObjectTags]


   
   ObjectTags property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Parent
   :type: Optional[Ansys.ACT.Core.Application.Model.IApplicationObject]


   
   Parent property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Project
   :type: Optional[Ansys.ACT.Automation.Mechanical.Project]


   
   Project property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Tree
   :type: Optional[Ansys.ACT.Automation.Mechanical.Tree]


   
   Tree property.
















   ..
       !! processed by numpydoc !!

.. py:property:: WorkingDir
   :type: Optional[str]


   
   WorkingDir property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: AddSessionVariable(varName: str, value: str) -> None

   
   AddSessionVariable method.

   ..
       !! processed by numpydoc !!

.. py:method:: AnalysisById(id: int) -> Ansys.ACT.Interfaces.Analysis.IAnalysis

   
   See  for general information about this method.

   ..
       !! processed by numpydoc !!

.. py:method:: AnalysisByName(name: str) -> Ansys.ACT.Interfaces.Analysis.IAnalysis

   
   AnalysisByName method.

   ..
       !! processed by numpydoc !!

.. py:method:: AreEqual(other: Ansys.ACT.Core.Application.Model.IApplicationObject) -> bool

   
   AreEqual method.

   ..
       !! processed by numpydoc !!

.. py:method:: CleanUp() -> None

   
   CleanUp method.

   ..
       !! processed by numpydoc !!

.. py:method:: ComponentById(id: int) -> Ansys.ACT.Interfaces.Mechanical.IMechanicalSelectionInfo

   
   ComponentById method.

   ..
       !! processed by numpydoc !!

.. py:method:: CoordinateSystemById(id: int) -> Ansys.ACT.Interfaces.Analysis.ICoordinateSystem

   
   CoordinateSystemById method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateChild(objName: str, ext: Ansys.ACT.Interfaces.Common.IExtension, parentObj: Any) -> Ansys.ACT.Interfaces.UserObject.IUserObject

   
   CreateChild method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjRef(requestedType: type) -> System.Runtime.Remoting.ObjRef

   
   CreateObjRef method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObject(objName: str) -> Ansys.ACT.Interfaces.UserObject.IUserObject

   
   CreateObject method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjectCommand(userObject: Ansys.ACT.Interfaces.UserObject.IUserObject) -> Ansys.Common.Interop.DSWBApplet.IDSAppCommand

   
   CreateObjectCommand method.

   ..
       !! processed by numpydoc !!

.. py:method:: CurrentConsistentUnitFromQuantityName(quantityName: str) -> str

   
   CurrentConsistentUnitFromQuantityName method.

   ..
       !! processed by numpydoc !!

.. py:method:: CurrentUnitFromQuantityName(quantityName: str) -> str

   
   CurrentUnitFromQuantityName method.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete(objsToDelete: Ansys.Common.Interop.AnsCoreObjects.AnsVARIANTColl) -> bool

   
   Delete method.

   ..
       !! processed by numpydoc !!

.. py:method:: DeleteSessionVariable(varName: str) -> None

   
   DeleteSessionVariable method.

   ..
       !! processed by numpydoc !!

.. py:method:: DummyNodeRemoveAndFillObjects(classId: Ansys.Common.Interop.DSObjectTypes.DSClsId) -> None

   
   DummyNodeRemoveAndFillObjects method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLifetimeService() -> Any

   
   GetLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectById(id: int) -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   GetObjectById method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectsByName(name: str) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   GetObjectsByName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectsByType(type: MechanicalDataModel.GetObjectsByType.type) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   GetObjectsByType method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetSessionVariableValue(varName: str) -> str

   
   GetSessionVariableValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetUserObjectById(id: int) -> Ansys.ACT.Interfaces.UserObject.IUserObject

   
   GetUserObjectById method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetUserObjects(ext: Ansys.ACT.Interfaces.Common.IExtension) -> Iterable[Ansys.ACT.Interfaces.UserObject.IUserObject]

   
   GetUserObjects method.

   ..
       !! processed by numpydoc !!

.. py:method:: InitializeLifetimeService() -> Any

   
   InitializeLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: MeshDataByName(name: str) -> Ansys.ACT.Interfaces.Mesh.IMeshData

   
   MeshDataByName method.

   ..
       !! processed by numpydoc !!

.. py:method:: RecomputeState() -> None

   
   Recomputes the states of the data model objects. Best used with data model changes made during callbacks in Python Code or Extensions.

   ..
       !! processed by numpydoc !!

.. py:method:: Remove(dataModelObjects: Iterable[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]) -> None

   
   Remove method.

   ..
       !! processed by numpydoc !!

.. py:method:: ShouldSuspendStateEngineForDelete() -> bool

   
   ShouldSuspendStateEngineForDelete method.

   ..
       !! processed by numpydoc !!

.. py:method:: Suppress(dataModelObjects: Iterable[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]) -> None

   
   Suppress method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!

.. py:method:: Unsuppress(dataModelObjects: Iterable[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]) -> None

   
   Unsuppress method.

   ..
       !! processed by numpydoc !!



.. vale on